source/stylesheets/_custom.scss
body > div.row:first-of-type {
  padding-top: 2em;
}

.address {
  display:inline;
  list-style: none;
}

.article-title {
  color: black;

  border-bottom-style: none !important;
  border-bottom-width: 0 !important;
  padding-left: 0 !important;
}

.blog-nav {
  //@extend .row;

  margin-left: 0;
  margin-right: 0;
  margin-bottom: 2em;
  padding-top: 1em;
}

.comments {
  margin-top: 2em;
}

.byline {
  @include grid-row;

  .date {
    display: inline;
  }

  // Custom taglist processing
  .taglist {
    @extend .button-group;
    @extend .right;
    display: inline;
    margin: 0 !important;
  
    .tag {
      @extend .button;
      @extend .tiny;
      a {
        color: white;
      }
    }
  }
}

.project-summary-entry {
  @include grid-row;
  
  .teaser {
    @include grid-column(3);
  }

  .project-summary-info {
    @include grid-column(9);
  }
}

.selected-projects {
  @include block-grid(3);
  img {
    @include thumb;
  }

  li {
    h3 {
      text-align: center;
    }
  }
}

.sidebar {
  @media #{$medium-up} {
    @include grid-column(3);
  }
}

.site-footer {
  @include grid-column(12);
}

.sociallist {
  display: inline;
  list-style: none;
  margin-top: 1em;

  li {
    display: inline;
  }
}

.teaser {
  img {
    @include thumb($box-shadow-hover: $thumb-box-shadow);
  }

  a img {
    @include thumb;
  }
}

.project-links {
  @extend .button-group;

  .link {
    @extend .button;
    @extend .tiny;
  }
}

#content {
  @media #{$medium-up} {
    @include grid-column(9);
  }

  h1 {
    //margin-left: 1em;
    margin-top: 0;
  }

  h2 {
    padding-left: 0.5em;
    border-bottom-style: $hr-border-style;
    border-bottom-width: $hr-border-width;
    border-bottom-color: $hr-border-color;
  }

  ul {
    list-style-position: inside;
  }

  .button-group {
    margin-top: 1em;
  }
}

